# discbot

./: .env.example  README.adoc  pyproject.toml
.github/workflows/: lint.yml
src/discbot/: main.py
