[project]
name = "discbot"
version = "0.0.1"
description = "C"
readme = "README.adoc"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "I", "B", "W", "UP", "C4", "ARG", "RET", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
